--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -649,6 +649,8 @@
             <input name="name" type="hidden" value="" />
             <input name="subject" type="hidden" value="" />
             <input name="draft" type="hidden" value="false" />
+            <a name="downloadButton" href="javascript:lord.downloadThread();">
+                <img src="/<%= sitePathPrefix %>img/download.png" title="<%= downloadThreadText %>" /></a>
             <a href="javascript:lord.complain();">
                 <img src="/<%= sitePathPrefix %>img/complain.png" title="<%= complainText %>" /></a>
             <a name="deleteButton"
