--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -5,11 +5,9 @@
 <% view base_board uses Content::BaseBoard extends base %>
 
 <% template banner() %>
-<% if ( !content.bannerFileName.empty() ) %>
-    <div class="banner">
-        <img src="/<%= sitePathPrefix %>img/banner/<%= bannerFileName %>">
-    </div>
-<% end %>
+<div class="banner">
+    <img src="/<%= sitePathPrefix %>img/banner/<%= bannerFileName %>">
+</div>
 <% end template %>
 
 <% template captchaField(std::string position) %>
@@ -113,152 +111,141 @@
 <% end template %>
 
 <% template createAction(std::string position) %>
-<% if ( content.postingEnabled ) %>
-    <div class="createAction">
-        <div>
-            [<a id="showHidePostFormButton<%= position %>" href="javascript:lord.showHidePostForm('<%= position %>');">
-                <%= showPostFormText %>
-            </a>]
-        </div>
-        <form id="postForm<%= position %>" class="postFormInvisible" method="post" accept-charset="utf-8"
-              action="/<%= sitePathPrefix %>action/<%= action %>" enctype="multipart/form-data"
-              target="kostyleeque" onsubmit="lord.submitted(this);">
-            <input type="hidden" id="postFormInputBoard<%= position %>" value="<%= currentBoard.name %>"
-                   name="board" />
-            <% if ( content.currentThread > 0 ) %>
-                <input type="hidden" id="postFormInputThread<%= position %>" value="<%= currentThread %>"
-                       name="thread" />
-            <% end %>
-            <input type="hidden" id="postFormInput<%= position %>" value="" name="fileHashes" />
-            <table class="postFormTable">
-                <tbody>
-                    <% include customPostFormField0(position) %>
-                    <tr>
-                        <td class="postformLabel">
-                            <b><%= postFormLabelEmail %></b>
-                        </td>
-                        <td class="postformField">
-                            <input id="postFormInputEmail<%= position %>" type="text" maxlength="<%= maxEmailLength %>"
-                                   name="email" size="30" />
-                            <input type="submit" name="submit" value="<%= postFormButtonSubmit %>" />
-                        </td>
-                    </tr>
-                    <% include customPostFormField1(position) %>
-                    <tr>
-                        <td class="postformLabel">
-                            <b><%= postFormLabelName %></b>
-                        </td>
-                        <td class="postformField">
-                            <input type="text" maxlength="<%= maxNameLength %>" id="postFormInputName<%= position %>"
-                                   name="name" size="43" />
-                        </td>
-                    </tr>
-                    <% include customPostFormField2(position) %>
-                    <tr>
-                        <td class="postformLabel">
-                            <b><%= postFormLabelSubject %></b>
-                        </td>
-                        <td class="postformField">
-                            <input type="text" maxlength="<%= maxSubjectLength %>"
-                                   id="postFormInputSubject<%= position %>" name="subject" size="43" />
-                        </td>
-                    </tr>
-                    <% include customPostFormField3(position) %>
-                    <tr>
-                        <td class="postformLabel">
-                            <b><%= postFormLabelText %></b>
-                        </td>
-                        <td class="postformField">
-                            <textarea name="text" id="postFormInputText<%= position %>" rows="10" cols="43"
-                                      placeholder="<%= postFormTextPlaceholder %>" class="postFormTextarea"></textarea>
-                        </td>
-                    </tr>
-                    <% include customPostFormField4(position) %>
-                    <% if ( content.moder >= 10 ) %>
-                        <tr>
-                            <td class="postformLabel">
-                                <b><%= postFormLabelRaw %></b>
-                            </td>
-                            <td class="postformField">
-                                <input type="checkbox" id="postFormInputRaw<%= position %>" name="raw" value="true" />
-                            </td>
-                        </tr>
-                    <% end %>
-                    <% if ( content.draftsEnabled && content.loggedIn ) %>
-                        <tr>
-                            <td class="postformLabel">
-                                <b><%= postFormLabelDraft %></b>
-                            </td>
-                            <td class="postformField">
-                                <input type="checkbox" id="postFormInputDraft<%= position %>" name="draft"
-                                       value="true" />
-                            </td>
-                        </tr>
-                    <% end %>
-                    <% include customPostFormField5(position) %>
-                    <tr>
-                        <td class="postformLabel">
-                            <b><%= postFormInputFile %></b>
-                        </td>
-                        <td class="postformField">
-                            <div class="postformFile" onclick="lord.browseFile(event, this);"
-                                 title="<%= selectFileText %>">
-                                <img class="postformFilePreview" src="/<%= sitePathPrefix %>img/addfile.png">
-                                <input type="file" name="file" onchange="lord.fileSelected(this);"
-                                       class="postformFileInput" accept="<%= supportedFileTypes %>" />
-                                <span class="postformFileText"></span>
-                                <a href="javascript:void(0);" style="display: none;" onclick="lord.removeFile(this);"
-                                   class="postformFileRemoveButton">
-                                    <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= removeFileText %>"
-                                         class="postformFileRemoveImage"></a>
-                            </div>
-                        </td>
-                    </tr>
-                    <% include customPostFormField6(position) %>
-                    <tr>
-                        <td class="postformLabel">
-                            <b><%= postFormLabelPassword %></b>
-                        </td>
-                        <td class="postformField">
-                            <input type="password" maxlength="<%= maxPasswordLength %>"
-                                   id="postFormInputPassword<%= position %>" name="password" size="43" />
-                        </td>
-                    </tr>
-                    <% include customPostFormField7(position) %>
-                    <tr>
-                        <td class="postformLabel">
-                            <b><%= postFormLabelCaptcha %></b>
-                        </td>
-                        <td id="googleCaptcha<%= position %>" class="postformField">
-                            <% if ( content.captchaEnabled ) %>
-                                <% if ( content.captchaQuota > 0 ) %>
-                                    <span class="noCaptchaText"><%= noCaptchaText %>. <%= captchaQuotaText %>
-                                        <%= captchaQuota %></span>
-                                <% else %>
-                                    <% include captchaField(position) %>
-                                <% end %>
-                            <% else %>
-                                <span class="noCaptchaText"><%= noCaptchaText %></span>
-                            <% end %>
-                        </td>
-                    </tr>
-                    <% include customPostFormField8(position) %>
-                    <tr>
-                        <td colspan="2" class="postformRules">
-                            <ul>
-                                <%foreach rule in postformRules %>
-                                    <% item %>
-                                        <li><%= rule | raw %></li>
-                                    <% end %>
-                                <% end %>
-                            </ul>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </form>
+<div class="createAction">
+    <div>
+        [<a id="showHidePostFormButton<%= position %>"
+            href="javascript:lord.showHidePostForm('<%= position %>');"><%= showPostFormText %></a>]
     </div>
-<% end %>
+    <form id="postForm<%= position %>" class="postFormInvisible" method="post" accept-charset="utf-8"
+          action="/<%= sitePathPrefix %>action/<%= action %>" enctype="multipart/form-data"
+          target="kostyleeque" onsubmit="lord.submitted(this);">
+        <input type="hidden" id="postFormInputBoard<%= position %>" value="<%= currentBoard.name %>" name="board" />
+        <% if ( content.currentThread > 0 ) %>
+            <input type="hidden" id="postFormInputThread<%= position %>" value="<%= currentThread %>" name="thread" />
+        <% end %>
+        <input type="hidden" value="" name="fileHashes" />
+        <table class="postFormTable">
+            <tbody>
+                <% include customPostFormField0(position) %>
+                <tr>
+                    <td class="postformLabel">
+                        <b><%= postFormLabelEmail %></b>
+                    </td>
+                    <td class="postformField">
+                        <input type="text" maxlength="<%= maxEmailLength %>" name="email" size="30" />
+                        <input type="submit" name="submit" value="<%= postFormButtonSubmit %>" />
+                    </td>
+                </tr>
+                <% include customPostFormField1(position) %>
+                <tr>
+                    <td class="postformLabel">
+                        <b><%= postFormLabelName %></b>
+                    </td>
+                    <td class="postformField">
+                        <input type="text" maxlength="<%= maxNameLength %>" name="name" size="43" />
+                    </td>
+                </tr>
+                <% include customPostFormField2(position) %>
+                <tr>
+                    <td class="postformLabel">
+                        <b><%= postFormLabelSubject %></b>
+                    </td>
+                    <td class="postformField">
+                        <input type="text" maxlength="<%= maxSubjectLength %>" name="subject" size="43" />
+                    </td>
+                </tr>
+                <% include customPostFormField3(position) %>
+                <tr>
+                    <td class="postformLabel">
+                        <b><%= postFormLabelText %></b>
+                    </td>
+                    <td class="postformField">
+                        <textarea name="text" rows="10" cols="43" placeholder="<%= postFormTextPlaceholder %>"
+                                  class="postFormTextarea"></textarea>
+                    </td>
+                </tr>
+                <% include customPostFormField4(position) %>
+                <% if ( content.moder >= 10 ) %>
+                    <tr>
+                        <td class="postformLabel">
+                            <b><%= postFormLabelRaw %></b>
+                        </td>
+                        <td class="postformField">
+                            <input type="checkbox" name="raw" value="true" />
+                        </td>
+                    </tr>
+                <% end %>
+                <% if ( content.draftsEnabled && content.loggedIn ) %>
+                    <tr>
+                        <td class="postformLabel">
+                            <b><%= postFormLabelDraft %></b>
+                        </td>
+                        <td class="postformField">
+                            <input type="checkbox" name="draft" value="true" />
+                        </td>
+                    </tr>
+                <% end %>
+                <% include customPostFormField5(position) %>
+                <tr>
+                    <td class="postformLabel">
+                        <b><%= postFormInputFile %></b>
+                    </td>
+                    <td class="postformField">
+                        <div class="postformFile" onclick="lord.browseFile(event, this);" title="<%= selectFileText %>">
+                            <img class="postformFilePreview" src="/<%= sitePathPrefix %>img/addfile.png">
+                            <input type="file" name="file" onchange="lord.fileSelected(this);"
+                                   class="postformFileInput" accept="<%= supportedFileTypes %>" />
+                            <span class="postformFileText"></span>
+                            <a href="javascript:void(0);" style="display: none;" onclick="lord.removeFile(this);"
+                               class="postformFileRemoveButton">
+                                <img src="/<%= sitePathPrefix %>img/delete.png" title="<%= removeFileText %>"
+                                     class="postformFileRemoveImage"></a>
+                        </div>
+                    </td>
+                </tr>
+                <% include customPostFormField6(position) %>
+                <tr>
+                    <td class="postformLabel">
+                        <b><%= postFormLabelPassword %></b>
+                    </td>
+                    <td class="postformField">
+                        <input type="password" maxlength="<%= maxPasswordLength %>" name="password" size="43" />
+                    </td>
+                </tr>
+                <% include customPostFormField7(position) %>
+                <tr>
+                    <td class="postformLabel">
+                        <b><%= postFormLabelCaptcha %></b>
+                    </td>
+                    <td id="googleCaptcha<%= position %>" class="postformField">
+                        <% if ( content.captchaEnabled ) %>
+                            <% if ( content.captchaQuota > 0 ) %>
+                                <span class="noCaptchaText"><%= noCaptchaText %>. <%= captchaQuotaText %>
+                                    <%= captchaQuota %></span>
+                            <% else %>
+                                <% include captchaField(position) %>
+                            <% end %>
+                        <% else %>
+                            <span class="noCaptchaText"><%= noCaptchaText %></span>
+                        <% end %>
+                    </td>
+                </tr>
+                <% include customPostFormField8(position) %>
+                <tr>
+                    <td colspan="2" class="postformRules">
+                        <ul>
+                            <%foreach rule in postformRules %>
+                                <% item %>
+                                    <li><%= rule | raw %></li>
+                                <% end %>
+                            <% end %>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </form>
+</div>
 <% end template %>
 
 <% template postFile(Content::File file, Content::Post post) %>
