--- a/src/lib/template/search.tmpl
+++ b/src/lib/template/search.tmpl
@@ -28,7 +28,7 @@
             };
         </script>
     </head>
-    <body onload="javascript:lord.setSearchQuery();">
+    <body>
         <% include baseTexts() %>
         <input type="hidden" id="hiddenSearchQuery" value="<%= query %>" />
         <input type="hidden" id="hiddenSearchQueryBoard" value="<%= queryBoard %>" />
