--- a/src/lib/template/rules.tmpl
+++ b/src/lib/template/rules.tmpl
@@ -8,7 +8,7 @@
     <head>
         <% include baseHead(1) %>
     </head>
-    <body onload="javascript:lord.initializeOnLoadSettings();">
+    <body>
         <% include baseTexts() %>
         <% include settings() %>
         <br />
